force-app/main/default/objects/DoI_Subject_Owner_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Represents the mapping of which Queue or User own DoI subject matters</description>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <description>Queue Name (Developer Name) for Subject Matter</description>
        <label>Queue Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Authcate__c</fullName>
        <description>Staff Authcate (User.FederationIdentifier) for Subject Matter</description>
        <label>Staff Authcate</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Matter__c</fullName>
        <label>Subject Matter</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>DoI Subject Owner Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subject_Matter__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>